- Fixed weired behavior in CGI parameter parsing. (Dmitry, Hannes Magnusson)
- Fixed a safe_mode bypass in cURL identified by Maksymilian Arciemowicz.
  (Ilia)
- Fixed a bug with PDO::FETCH_COLUMN|PDO::FETCH_GROUP mode when a column # by
  which to group by data is specified. (Ilia)
- Upgraded PCRE to version 7.6 (Nuno)


- Fixed Bug #44191 (preg_grep messes up array index). (Felipe)
- Fixed bug #44184 (Double free of loop-variable on exception). (Dmitry)
- Fixed bug #44171 (Invalid FETCH_COLUMN index does not raise an error). (Ilia)
- Fixed Bug #44159 (Crash: $pdo->setAttribute(PDO::STATEMENT_ATTR_CLASS, NULL)).
  (Felipe)
- Fixed bug #44152 (Possible crash with syslog logging on ZTS builds). (Ilia)
- Fixed bug #44069 (Huge memory usage with concatenation using . instead of
  .=). (Dmitry)
- Fixed bug #44046 (crash inside array_slice() function with an invalid
  by-ref offset). (Ilia)
- Fixed bug #44028 (crash inside stream_socket_enable_crypto() when enabling
  encryption without crypto type). (Ilia)
- Fixed bug #44018 (RecursiveDirectoryIterator options inconsistancy). (Marcus)
- Fixed bug #43998 (Two error messages returned for incorrect encoding for
  mb_strto[upper|lower]). (Rui)
- Fixed bug #43994 (mb_ereg 'successfully' matching incorrect). (Rui)
- Fixed bug #43954 (Memory leak when sending the same HTTP status code
  multiple times). (Scott)
- Fixed bug #43927 (koi8r is missing from html_entity_decode()).
  (andy at demos dot su, Tony)
- Fixed faulty fix for bug #40189 (endless loop in zlib.inflate stream filter).
  (Greg)
- Fixed bug #43912 (Interbase column names are truncated to 31 characters).
  (Ilia)
- Fixed bug #43875 (Two error messages returned for $new and $flag argument
  in mysql_connect()). (Hannes)
- Fixed bug #43863 (str_word_count() breaks on cyrillic "ya" in locale cp1251).
  (phprus at gmail dot com, Tony)
- Fixed bug #43841 (mb_strrpos offset is byte count for negative values). (Rui)